[package]
name = "tlcp"
edition = "2021"
version = "0.1.0"
description = """
The TLCP protocol implementation.
"""

[dependencies]
thiserror = "2.0"
num = "0.4.3"
chrono = "0.4"
rand = "0.8"
asn1 = "0.20.0"
base64 = "0.22"

opengm_crypto = {version = "0.1.0", path = "../crypto"}

[dev-dependencies]
hex-literal = "0.4"